idea/testData/multiplatform/duplicateExpectsWithStrongIncompatibility/right/right.kt
expect fun foo<!NO_ACTUAL_FOR_EXPECT!>(x: Int)<!>: Int